<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Capstone</string>
    <string name="app_menu">Columbia 1872 Historic Map</string>
    <string name="app_admin">App Admin</string>
    <string name="action_settings">Settings</string>
    <string name="MapView">View Map</string>
    <string name="AdminLogin">Admin Login</string>
    <string name="app_login">Administrator Login</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login_button">Login</string>
    <string name="main_title">WOODROW WILSON FAMILY HOME</string>
    <string name="location_title_hint">Location 1</string>
    <string name="location_title_label">Title</string>
    <string name="location_details_label">Details</string>
    <string name="location_solved_label">Solved?</string>
    <string name="locations_title">Locations</string>

    <color name="yellow">#FFCE00</color>
    <color name="black">#66665B</color>
    <color name="orange">#FF2D14</color>
    <color name="lightblue">#DCEEED</color>
    <color name="gray">#EFE9E2</color>
    <color name="white">#FFFFFF</color>

    <!-- State House Strings -->
    <string name="state_house">The State House</string>
    <string name="s_h_desc">Columbia was the location of South Carolina’s second State House. The legislature first met in this State House in 1790.</string>

    <!-- University of South Carolina Strings -->
    <string name="univ_south_carolina">The University of South Carolina</string>
    <string name="univ_desc">The Palmetto State established South Carolina College — the precursor to the University of South Carolina — on Dec. 19, 1801, as part of an effort to unite South Carolinians in the wake of the American Revolution. South Carolina\'s leaders saw the new college as a way to promote the good order and harmony of the state.</string>

    <!-- Wilson and Howe Family Strings -->
    <string name="wilson_howe">Wilson and Howe Families</string>
    <string name="family_desc">A photograph of the Wilson and Howe families.</string>

    <!-- Zion Baptist Church Strings -->
    <string name="zion_baptist">Zion Baptist Church</string>
    <string name="zion_desc">The Zion Baptist Church of Columbia was founded in 1865 by a group of people led by Reverend Frank Dobbins.</string>
    
    <!-- Penitentiary Strings -->
    <string name="col_pen">Columbia Penitentiary</string>
    <string name="pen_desc">The cell blocks of the Columbia Penitentiary circa 1872.</string>
    
    <!-- Theological Seminary Strings -->
    <string name="theol_sem">Columbia Theological Seminary</string>
    <string name="theol_desc">Columbia became the first permanent home of the Columbia Theological Seminary in 1830 and moved to rural Atlanta in the 1920\'s.  The seminary is associated with the Presbyterian Church.</string>

    <!-- Female Lunatic Asylum Strings -->
    <string name="lun_asyl">Female Lunatic Asylum</string>
    <string name="asyl_desc">The Columbia female lunatic asylum.</string>
    
    <!-- Town Hall Strings -->
    <string name="city_hall">Columbia Town Hall</string>
    <string name="city_hall_desc">Columbia\'s town hall was used for many purposes, one of them being an opera house.</string>
    
    <!-- Post Office Strings -->
    <string name="post_office">Post Office</string>
	<string name="post_office_desc">Columbia\'s US Post Office around 1872 and the post office in 1900.</string>
    
    <!-- Close button string -->
    <string name="close_button">Close</string>
    <string name="create_login">Create Administrator Login</string>
    <string name="save_button">Save</string>
    <string name="create_logintitle">Administrator Registration</string>
    <string name="admin_password">Admin Password:</string>

    <!-- Backup Email -->
    <string name="EmailBackup">Email Options</string>
    <string name="email_to">To:</string>
    <string name="email_subject">Subject:</string>
    <string name="email_message">Message:</string>
    <string name="send">Send</string>
    <string name="title_activity_email_backup">EmailBackup</string>
    <string name="message">Message</string>
    <string name="attach_file">Attach layout file</string>
    <string name="load_image">Load Image</string>
    <string name="attach_image">Attach image</string>
    
    <!-- Location -->
    <!-- &#8230; is used to replace ... for ellipsis, 8230 is the unicode for ellipsis, ; is needed as a delimiter -->
    <string name="editlocation">Editing Location</string>
    <string name="edittitle">Enter a title for this location &#8230; </string>
    <string name="editdescription">Enter a description for this location &#8230; </string>
    <string name="finished_editing_button">Add Location</string>
    <string name="loc_title">Location Title</string>
    <string name="loc_date">Location Date</string>
    <string name="deleteLocation">Delete Location</string>
    <string name="locations_list">List of Locations:</string>
    <string name="checkEdit">Did you mean to edit \n        this location?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>

</resources>
