<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EmailBackup" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
      
    <TextView
        android:id="@+id/email_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_to"
        android:textSize="24sp"
        />
 
    <EditText
        android:id="@+id/emailedit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" 
        android:textSize="24sp"> 
    </EditText>
 
    <TextView
        android:id="@+id/textViewSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_subject"
        android:textSize="24sp">
   </TextView>
        
    <EditText
        android:id="@+id/editTextSubject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType = "text"
        android:textSize="24sp">
    </EditText>
 
    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_message"
        android:textSize="24sp" />
 
    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:lines="5" 
        android:textSize="24sp"/>
    
    <CheckBox
        android:id="@+id/deleteLayoutFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_file" />
        
    <CheckBox
        android:id="@+id/checkAttachment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attach_file" />
    
    <Button
        android:id="@+id/LoadImage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_image"
        />
     
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    
    <Button
        android:id="@+id/Send"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/send" 
        />
  
</LinearLayout>
