<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/login_square"
    android:orientation="vertical" >
    
    <TextView 
       android:id="@+id/checkEdit"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:layout_marginTop="30dp"
       android:text="@string/checkEdit"
       android:textColor="@android:color/white"
       android:textSize="18sp"
       android:textStyle="bold" />

    <Button
       android:id="@+id/Yes"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:color="@android:color/white"
       android:text="@string/Yes" />
    
    <Button
       android:id="@+id/No"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:color="@android:color/white"
       android:text="@string/No" />

</LinearLayout>
