<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/login_square"
    android:orientation="vertical" >
    
    <TextView 
       android:id="@+id/textView1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:layout_marginTop="40dp"
       android:textColor="@android:color/white"
       android:textSize="23sp"
       android:textStyle="bold"
       android:text="@string/wilson_howe" />
    
    <ImageView
       android:id="@+id/imageView1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:src="@drawable/wilson_howe_family"
       android:contentDescription="@null" />
    
    <TextView
       android:id="@+id/textView2"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:layout_marginLeft="40dp"
       android:layout_marginRight="50dp"
       android:layout_marginTop="30dp"
       android:text="@string/family_desc"
       android:textColor="@android:color/white"
       android:textSize="16sp"
       android:textStyle="bold" />
    
    <Button
       android:id="@+id/close"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:text="@string/close_button" />

</LinearLayout>
