<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:screenOrientation="landscape"
    tools:context=".MainMenu">

    <TextView
        android:id="@+id/logintitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_login"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/password"
        android:layout_below="@+id/logintitle"
        android:layout_marginTop="30dp"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/passwordedit"
        android:layout_alignBottom="@+id/passwordedit"
        android:layout_toLeftOf="@+id/login"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/passwordedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login"
        android:layout_below="@+id/usernameedit"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textAppearance="?android:attr/textAppearanceSmall" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/usernameedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/username"
        android:layout_alignBottom="@+id/username"
        android:layout_alignLeft="@+id/passwordedit"
        android:layout_alignRight="@+id/passwordedit"
        android:ems="10"
        android:inputType="text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/login"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordedit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/login_button" />

</RelativeLayout>
