<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:screenOrientation="landscape"
    android:background="@color/black" >

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adminpasswordedit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_color" 
        android:textSize="24sp"
        android:text="@string/save_button"
        android:textStyle="bold" />

    <Button
        android:id="@+id/createlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adminpasswordedit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_color"
        android:textSize="24sp"
        android:text="@string/close_button"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/createlogintitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="@color/yellow"
        android:text="@string/create_logintitle"
        android:textSize="64sp"
        android:textStyle="bold" />

    <Button
            android:id="@+id/btnLoginGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/admin_registration"
            android:contentDescription="@string/login_google"
            android:textColor="#000000"
            android:text="@string/login_google"
            android:onClick="launchGoogleLogin" />
    
    
</RelativeLayout>